(geoclaw) add coarsen criteria to geoclaw options, change not to full copy the array

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -66,3 +66,11 @@
 
      mwaves = 3           # mwaves
      mthlim = 4 4 4       # mthlim (is a vector in general, with 'mwaves' entries)
+
+# Coarsening
+     dry_tolerance_c = 0.0005
+     wave_tolerance_c = 0.005     
+     speed_tolerance_entries_c = 6
+     speed_tolerance_c = 500000000000.0 500000000000.0 500000000000.0 500000000000.0 500000000000.0 500000000000.0
+
+
