--- a/Makefile.apps
+++ b/Makefile.apps
@@ -3,10 +3,12 @@
 # ----------------------------------
 # Solver libraries
 # ----------------------------------
+include src/solvers/fc2d_dummy/Makefile.am
 include src/solvers/fc2d_clawpack4.6/Makefile.am
 include src/solvers/fc2d_clawpack5/Makefile.am
+if FCLAW_ENABLE_GEOCLAW
 include src/solvers/fc2d_geoclaw/Makefile.am
-include src/solvers/fc2d_dummy/Makefile.am
+endif
 
 # ----------------------------------
 # Applications
@@ -50,5 +52,7 @@ include applications/Mountain/Makefile.am
 include applications/amrclaw/euler/2d/shockbubble/Makefile.am
 # include applications/amrclaw/shallow/2d/radialdam/Makefile.am
 
-# Geoclaw example
+# Geoclaw examples
+if FCLAW_ENABLE_GEOCLAW
 include applications/geoclaw/bowl_radial/Makefile.am
+endif
