(geoclaw) modify coarsening routine (ignore the speed criteria first) and fixed the interpolation error

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -71,6 +71,6 @@
      dry_tolerance_c = 0.0005
      wave_tolerance_c = 0.005     
      speed_tolerance_entries_c = 6
-     speed_tolerance_c = 500000000000.0 500000000000.0 500000000000.0 500000000000.0 500000000000.0 500000000000.0
+     speed_tolerance_c = 5e12 5e12 5e12 5e12 5e12 5e12
 
 
