--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -4,8 +4,8 @@
 [Options]
 
 # Grid dimensions
-     mx = 16		      # mx_leaf
-     my = 16              # my_leaf
+     mx = 50		      # mx_leaf
+     my = 50              # my_leaf
      mbc = 2              # Number of ghost cells
 
 # Regridding information
@@ -35,7 +35,7 @@
      subcycle = T         # subcycle in time ( = T or F).
 
 # File and console IO
-     verbosity = production        # verbose
+     verbosity = info     # verbose
      serialout = T
 
 # Diagnostics and debugging
