--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -69,8 +69,8 @@
 
 # Coarsening
      dry_tolerance_c = 0.0005
-     wave_tolerance_c = 0.005     
+     wave_tolerance_c = 0.005
      speed_tolerance_entries_c = 6
-     speed_tolerance_c = 500000000000.0 500000000000.0 500000000000.0 500000000000.0 500000000000.0 500000000000.0
+     speed_tolerance_c = 5e12 5e12 5e12 5e12 5e12 5e12
 
-
+# 500000000000.0 500000000000.0 500000000000.0 500000000000.0 500000000000.0 500000000000.0
