--- a/Makefile.apps
+++ b/Makefile.apps
@@ -55,4 +55,5 @@ include applications/amrclaw/euler/2d/shockbubble/Makefile.am
 # Geoclaw examples
 if FCLAW_ENABLE_GEOCLAW
 include applications/geoclaw/bowl_radial/Makefile.am
+include applications/geoclaw/flat_bathymetry/Makefile.am
 endif
