(geoclaw/tag4coarsen) fixed code that changes 'level'

--- a/applications/geoclaw/flat_bathymetry/fclaw_options.ini
+++ b/applications/geoclaw/flat_bathymetry/fclaw_options.ini
@@ -35,7 +35,7 @@
      subcycle = T         # subcycle in time ( = T or F).
 
 # File and console IO
-     verbosity = info        # verbose
+     verbosity = production        # verbose
      serialout = T
 
 # Diagnostics and debugging
