(torus/ini) Make ini file a complete ini file

--- a/applications/advection/2d/torus/example2_torus.ini
+++ b/applications/advection/2d/torus/example2_torus.ini
@@ -4,16 +4,20 @@
 
 [Options]
 
-     mx = 32
-     my = 32
+     mx = 16
+     my = 16
+     mbc = 2
+
      minlevel = 3        # Minimum level
-     maxlevel = 6        # Maximum levels of refinement
+     maxlevel = 3        # Maximum levels of refinement
+
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = T
      smooth-level = 5
      coarsen-delay = 0
 
-     ghost_patch_pack_area = T
+     refine_threshold = 0.25
+     coarsen_threshold = 0.01
 
      refine_threshold = 0.25
      coarsen_threshold = 0.01
@@ -34,12 +38,40 @@
      advance-one-step = F
      outstyle-uses-maxlevel = F
 
-     verbosity = essential
+     weighted_partition = T
+
+# Equation and boundary conditions
+     meqn = 1             # meqn
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+# Diagnostics and debugging
+     check_conservation = F
+     trapfpe = F          # trap floating point exceptions
+     mpi_debug = F
+     compute-error = T
+     run-user-diagnostics = F
+
+# File and console IO
+     verbosity = production        # verbose
+     serialout = T
+     tikzout = F
+     tikz_figsize = 4 4
+     vtkout = 0               # Read into VisIt
 
 # Mapping
      manifold = T         # Manifold
      mi = 5       # Dimensions of the brick
      mj = 2        # mj approx alpha*mi  (8 = 0.4*20)
 
+     periodic_x = T
+     periodic_y = T
+
 [clawpack46]
-     mcapa = 1
+     claw_verbosity = 0
+     order  = 2 2         # normal and transverse order
+     mcapa = 1            # mcapa
+     maux = 3             # maux  (velocity stored in (2,3)
+     src_term = 0         # src_term
+
+     mwaves = 1           # mwaves
+     mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
