(matlab/ini) Minor changes

--- a/applications/advection/2d/torus/example2_torus.ini
+++ b/applications/advection/2d/torus/example2_torus.ini
@@ -1,5 +1,5 @@
 [user]
-     example = 2          # 2 = torus
+     example = 7          # 2 = torus
      alpha = 0.4          # Ratio of outer radius to inner radius (torus)
 
 [Options]
@@ -8,30 +8,28 @@
      my = 16
      mbc = 2
 
-     minlevel = 3        # Minimum level
-     maxlevel = 3        # Maximum levels of refinement
+     minlevel = 1        # Minimum level
+     maxlevel = 8        # Maximum levels of refinement
 
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = T
-     smooth-level = 5
+     smooth-level = 7
+
      coarsen-delay = 0
 
-     refine_threshold = 0.25
-     coarsen_threshold = 0.01
-
-     refine_threshold = 0.25
-     coarsen_threshold = 0.01
+     refine_threshold = 1.0
+     coarsen_threshold = 0.05
 
 # Time stepping
      tfinal = 0.5         #
-     initial_dt = 1.25e-3    # Initial time step for 'minlevel'
+     initial_dt = 1e-2    # Initial time step for 'minlevel'
 
      use_fixed_dt = T     # Take a fixed time step
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 40            # Used for all three out styles;  has different meaning, though.
+     nout = 100            # Used for all three out styles;  has different meaning, though.
      nstep = 10          # Only used if outstyle is 3
 
      subcycle =  F        # subcycle in time ( = T or F).
@@ -52,7 +50,7 @@
      run-user-diagnostics = F
 
 # File and console IO
-     verbosity = production        # verbose
+     verbosity = essential        # verbose
      serialout = T
      tikzout = F
      tikz_figsize = 4 4
@@ -74,4 +72,4 @@
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
-     mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthlim = 0           # mthlim (is a vector in general, with 'mwaves' entries)
