(shockbubble/matlab/ini) Minor changes to match earlier results

--- a/applications/amrclaw/euler/2d/shockbubble/example_sisc.ini
+++ b/applications/amrclaw/euler/2d/shockbubble/example_sisc.ini
@@ -21,11 +21,11 @@
      coarsen_threshold = 0.2
      smooth-refine = T
      coarsen-delay = 0
-     smooth-level = 0
+     smooth-level = 5
 
 # Time stepping
      tfinal = 0.75          # Since we are not scaling the results
-     initial_dt = 5e-3          # Initial time step for 'minlevel'
+     initial_dt = 5.e-3          # Initial time step for 'minlevel'
 
      use_fixed_dt = F            # Take a fixed time step
      max_cfl = 1.0
@@ -36,7 +36,8 @@
      nstep = 1                   # Only used if outstyle is 3
 
      subcycle = T                # subcycle in time ( = T or F).
-
+     advance-one-step = F
+     outstyle-uses-maxlevel = F
 
 # File and console IO
      verbosity = essential      # verbose
