--- a/applications/advection/2d/torus/example2_torus.ini
+++ b/applications/advection/2d/torus/example2_torus.ini
@@ -17,9 +17,9 @@
 
      coarsen-delay = 0
 
-     refine_threshold = 0.1
+     refine_threshold = 1.0
 
-     coarsen_threshold = 0.001
+     coarsen_threshold = 0.05
 
 # Time stepping
      tfinal = 0.5         #
@@ -33,7 +33,7 @@
      nout = 100            # Used for all three out styles;  has different meaning, though.
      nstep = 10          # Only used if outstyle is 3
 
-     subcycle =  F        # subcycle in time ( = T or F).
+     subcycle =  T       # subcycle in time ( = T or F).
      advance-one-step = F
      outstyle-uses-maxlevel = F
 
