(geoclaw) Finished geoclaw_average2coarse routine

--- a/applications/advection/2d/swirl/example0.ini
+++ b/applications/advection/2d/swirl/example0.ini
@@ -1,7 +1,7 @@
 [user]
     example = 0
     tperiod = 4.0
-    claw-version = 4
+    claw-version = 5
 
 [Options]
     mx = 8
@@ -31,7 +31,7 @@
      subcycle = T         # subcycle in time ( = T or F).
 
 # File and console IO
-     verbosity = essential        # verbose
+     verbosity = info        # verbose
 
      trapfpe = T          # Trap floating point exceptions
      mpi_debug = F
