--- a/applications/geoclaw/flat_bathymetry/fclaw_options.ini
+++ b/applications/geoclaw/flat_bathymetry/fclaw_options.ini
@@ -18,7 +18,7 @@
      coarsen-delay = 0
 
 # Time stepping
-     tfinal = 6.0         #  Final time
+     tfinal = 1.0         #  Final time
 
      use_fixed_dt = F     # Take a fixed time step
      initial_dt = 0.016   # Initial time step for 'minlevel'
@@ -29,20 +29,20 @@
                           # 2 : not implemented;
                           # 3 : Take nout steps;  save files every nstep steps.
 
-     nout = 24            # Used for all three out styles;  has different meaning, though.
+     nout = 1            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
 
 # File and console IO
-     verbosity = production        # verbose
+     verbosity = info        # verbose
      serialout = T
 
 # Diagnostics and debugging
      trapfpe = T          # Trap floating point errors.
      mpi_debug = F        # Attach mpi processes in gdb
      check_conservation = F
-     run_diagnostics = F
+     run_diagnostics = T
 
 # Equations and boundary conditions
      meqn = 3             # Number of equations
