(shockbubble/ini) Minor changes

--- a/applications/amrclaw/euler/2d/shockbubble/example_sisc.ini
+++ b/applications/amrclaw/euler/2d/shockbubble/example_sisc.ini
@@ -31,8 +31,8 @@
      max_cfl = 1.0
      desired_cfl = 0.7
 
-     outstyle = 1                # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 1                    # Used for all three out styles
+     outstyle = 3                # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     nout = 100                    # Used for all three out styles
      nstep = 1                   # Only used if outstyle is 3
 
      subcycle = T                # subcycle in time ( = T or F).
@@ -43,7 +43,7 @@
      verbosity = essential      # verbose
      vtkout = F
      serialout = T             # ascii output
-     tikzout = T
+     tikzout = F
      tikz_figsize = 8 2    # Inches, used to scale tikz picture
 
 # Debugging and diagnostics
