--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -4,13 +4,16 @@
 [Options]
 
 # Grid dimensions
-     mx = 16		      # mx_leaf
-     my = 16              # my_leaf
+     mx = 64		      # mx_leaf
+     my = 64              # my_leaf
      mbc = 2              # Number of ghost cells
 
+# Ghost cells initialization
+     init_ghostcell = T   # Initialize ghost cells
+
 # Regridding information
-     minlevel = 4         # Minimum level
-     maxlevel = 4         # Maximum levels of refinement
+     minlevel = 2         # Minimum level
+     maxlevel = 2         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.05
@@ -18,7 +21,7 @@
      coarsen-delay = 0
 
 # Time stepping
-     tfinal = 8.0         #  Final time
+     tfinal = 8.0         # Final time
 
      use_fixed_dt = F     # Take a fixed time step
      initial_dt = 0.016   # Initial time step for 'minlevel'
