--- a/applications/amrclaw/euler/2d/shockbubble/example_sisc.ini
+++ b/applications/amrclaw/euler/2d/shockbubble/example_sisc.ini
@@ -15,7 +15,7 @@
 
 # Regridding information
      minlevel = 0               # Minimum level
-     maxlevel = 5               # Maximum levels of refinement
+     maxlevel = 6               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.5
      coarsen_threshold = 0.2
@@ -54,7 +54,7 @@
      ghost_patch_pack_area = T
 
 # Equations and boundary conditions
-     meqn = 4             # meqn
+     meqn = 5             # meqn
      mthbc = 1 1 3 1      # mthbc(1) (left edge), etc.
 
 # Mapping and topology
@@ -75,5 +75,5 @@
      maux = 1             # maux
      src_term = 1         # src_term
 
-     mwaves = 4           # mwaves
-     mthlim = 4 4 4 4       # mthlim (is a vector in general, with 'mwaves' entries)
+     mwaves = 5           # mwaves
+     mthlim = 4 4 4 4 1       # mthlim (is a vector in general, with 'mwaves' entries)
