(amrclaw/shockbubble) Added qinit for new tracer problem

--- a/applications/amrclaw/euler/2d/shockbubble/example_sisc.ini
+++ b/applications/amrclaw/euler/2d/shockbubble/example_sisc.ini
@@ -9,12 +9,12 @@
 
 [Options]
 
-     mx = 8
-     my = 8
+     mx = 32
+     my = 32
      mbc = 2
 
 # Regridding information
-     minlevel = 3               # Minimum level
+     minlevel = 0               # Minimum level
      maxlevel = 3               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.5
@@ -25,22 +25,22 @@
 
 # Time stepping
      tfinal = 0.75          # Since we are not scaling the results
-     initial_dt = 5.e-3          # Initial time step for 'minlevel'
+     initial_dt = 1.25e-3          # Initial time step for 'minlevel'
 
-     use_fixed_dt = F            # Take a fixed time step
+     use_fixed_dt = T          # Take a fixed time step
      max_cfl = 1.0
      desired_cfl = 0.7
 
-     outstyle = 1                # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 10                    # Used for all three out styles
-     nstep = 1                   # Only used if outstyle is 3
+     outstyle = 3                # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     nout = 80                  # Used for all three out styles
+     nstep = 80                   # Only used if outstyle is 3
 
      subcycle = T                # subcycle in time ( = T or F).
      advance-one-step = F
      outstyle-uses-maxlevel = F
 
 # File and console IO
-     verbosity = essential      # verbose
+     verbosity = production      # verbose
      vtkout = F
      serialout = T             # ascii output
      tikzout = F
