More minor fixes to get code to compile

--- a/Makefile.apps
+++ b/Makefile.apps
@@ -23,7 +23,7 @@ include applications/dummy/Makefile.am
 # include applications/metric/2d/all_mappings/Makefile.am
 
 # Scalar advection on manifolds
-include applications/advection/2d/swirl_mapped/Makefile.am
+# include applications/advection/2d/swirl_mapped/Makefile.am
 include applications/advection/2d/swirl/Makefile.am
 # include applications/advection/2d/torus/Makefile.am
 # include applications/advection/2d/hemisphere/Makefile.am
