--- a/applications/advection/2d/swirl/Makefile.am
+++ b/applications/advection/2d/swirl/Makefile.am
@@ -13,8 +13,8 @@ applications_advection_2d_swirl_swirl_SOURCES = \
 	applications/advection/2d/swirl/psi.f \
 	applications/advection/2d/swirl/user_4.6/tag4refinement.f \
 	applications/advection/2d/swirl/user_4.6/bc2.f \
-	applications/advection/2d/swirl/user_4.6/rpn2_vc_advection.f90 \
-	applications/advection/2d/swirl/user_4.6/rpt2_vc_advection.f90 \
+	applications/advection/2d/swirl/user_4.6/rpn2_vc_advection.f \
+	applications/advection/2d/swirl/user_4.6/rpt2_vc_advection.f \
 	applications/advection/2d/swirl/user_4.6/qinit.f \
 	applications/advection/2d/swirl/user_4.6/b4step2.f \
 	applications/advection/2d/swirl/user_4.6/setaux.f \
@@ -25,6 +25,6 @@ applications_advection_2d_swirl_swirl_CPPFLAGS = \
         $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) $(FCLAW_DUMMY_CPPFLAGS)
 
 applications_advection_2d_swirl_swirl_LDADD = \
-        $(FCLAW_CLAWPACK5_LDADD) $(FCLAW_DUMMY_LDADD) $(LDADD)
+        $(FCLAW_CLAWPACK46_LDADD) $(FCLAW_DUMMY_LDADD) $(LDADD)
 
-## @top_builddir@/src/solvers/fclaw2d_clawpack5/libclawpack5.la
+## @top_builddir@/src/solvers/fclaw2d_clawpack46/libclawpack5.la
