--- a/applications/advection/2d/swirl/example0.ini
+++ b/applications/advection/2d/swirl/example0.ini
@@ -1,7 +1,7 @@
 [user]
     example = 0
     tperiod = 4.0
-    claw-version = 5
+    claw-version = 4
 
 [Options]
     mx = 8
@@ -51,7 +51,8 @@
      ay = 0
      by = 1
 
-[clawpack5]
+#[clawpack5]
+[clawpack46]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
      maux = 2             # maux
