(geoclaw) add fortran routine specific to geoclaw

--- a/src/solvers/fc2d_geoclaw/Makefile.am
+++ b/src/solvers/fc2d_geoclaw/Makefile.am
@@ -1,6 +1,7 @@
 # -*- Makefile -*-
 libgeoclaw_generated_headers =
 libgeoclaw_installed_headers = \
+	src/solvers/fc2d_clawpack5/fc2d_clawpack5.h \
 	src/solvers/fc2d_geoclaw/fc2d_geoclaw.h \
 	src/solvers/fc2d_geoclaw/types.h \
 	src/solvers/fc2d_geoclaw/fc2d_geoclaw_options.h
@@ -48,7 +49,13 @@ libgeoclaw_compiled_sources = \
 	src/solvers/fc2d_geoclaw/geolib_source/geoclaw_b4step2.f90 \
 	src/solvers/fc2d_geoclaw/geolib_source/geoclaw_qinit.f90 \
 	src/solvers/fc2d_geoclaw/geolib_source/cellgridintegrate2.f \
-	src/solvers/fc2d_geoclaw/geolib_source/allowflag.f90
+	src/solvers/fc2d_geoclaw/geolib_source/allowflag.f90 \
+	src/solvers/fc2d_geoclaw/fclaw2d_source/fc2d_geoclaw_average_fort.f \
+	src/solvers/fc2d_geoclaw/fclaw2d_source/fc2d_geoclaw_interpolate_fort.f \
+	src/solvers/fc2d_clawpack5/fclaw2d_source/fc2d_clawpack5_copy_fort.f \
+	src/solvers/fc2d_clawpack5/fclaw2d_source/fc2d_clawpack5_ghostpack_fort.f \
+	src/solvers/fc2d_clawpack5/fclaw2d_source/fc2d_clawpack5_diagnostics_fort.f \
+	src/solvers/fc2d_clawpack5/fclaw2d_source/fc2d_clawpack5_timeinterp_fort.f 
 
 lib_LTLIBRARIES += src/solvers/fc2d_geoclaw/libgeoclaw.la
 
@@ -57,7 +64,7 @@ src_solvers_fc2d_geoclaw_libgeoclaw_la_SOURCES = \
   $(libgeoclaw_compiled_sources)
 
 src_solvers_fc2d_geoclaw_libgeoclaw_la_CPPFLAGS = \
-  $(AM_CPPFLAGS) $(FCLAW_CPPFLAGS)
+  $(AM_CPPFLAGS) $(FCLAW_CPPFLAGS) $(FCLAW_CLAWPACK5_CPPFLAGS)
 
 FCLAW_GEOCLAW_CPPFLAGS = -I@top_srcdir@/src/solvers/fc2d_geoclaw
 FCLAW_GEOCLAW_LDADD = @top_builddir@/src/solvers/fc2d_geoclaw/libgeoclaw.la
