--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -35,7 +35,7 @@
      nout = 50            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
-     subcycle = T         # subcycle in time ( = T or F).
+     subcycle = F         # subcycle in time ( = T or F).
 
 # File and console IO
      verbosity = production     # verbose
