(bowl_radial) Minor changes

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -4,8 +4,8 @@
 [Options]
 
 # Grid dimensions
-     mx = 32		      # mx_leaf
-     my = 32              # my_leaf
+     mx = 8		      # mx_leaf
+     my = 8              # my_leaf
      mbc = 2              # Number of ghost cells
 
 # Ghost cells initialization
@@ -13,7 +13,7 @@
 
 # Regridding information
      minlevel = 2         # Minimum level
-     maxlevel = 4         # Maximum levels of refinement
+     maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.05
@@ -21,21 +21,21 @@
      coarsen-delay = 0
 
 # Time stepping
-     tfinal = 0.5         # Final time
+     tfinal = 5         # Final time
 
      use_fixed_dt = F     # Take a fixed time step
      initial_dt = 0.016   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 3         # 1 : Output steps  = tfinal/nout;
+     outstyle = 1         # 1 : Output steps  = tfinal/nout;
                           # 2 : not implemented;
                           # 3 : Take nout steps;  save files every nstep steps.
 
-     nout = 50            # Used for all three out styles;  has different meaning, though.
+     nout = 25            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
-     subcycle = F         # subcycle in time ( = T or F).
+     subcycle = T         # subcycle in time ( = T or F).
 
 # File and console IO
      verbosity = production     # verbose
