(geoclaw) Update bowl; still working on fix for interpolation

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -12,7 +12,7 @@
      init_ghostcell = T   # Initialize ghost cells
 
 # Regridding information
-     minlevel = 2         # Minimum level
+     minlevel = 3         # Minimum level
      maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
@@ -28,14 +28,14 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 1         # 1 : Output steps  = tfinal/nout;
+     outstyle = 3         # 1 : Output steps  = tfinal/nout;
                           # 2 : not implemented;
                           # 3 : Take nout steps;  save files every nstep steps.
 
      nout = 25            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
-     subcycle = T         # subcycle in time ( = T or F).
+     subcycle = F         # subcycle in time ( = T or F).
 
 # File and console IO
      verbosity = production     # verbose
