(bowl-radial) modify application setting

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -28,7 +28,7 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 3         # 1 : Output steps  = tfinal/nout;
+     outstyle = 1         # 1 : Output steps  = tfinal/nout;
                           # 2 : not implemented;
                           # 3 : Take nout steps;  save files every nstep steps.
 
@@ -71,9 +71,9 @@
      mthlim = 4 4 4       # mthlim (is a vector in general, with 'mwaves' entries)
 
 # Coarsening
-     dry_tolerance_c = 0.0005
-     wave_tolerance_c = 0.005
+     dry_tolerance_c = 1.e-3
+     wave_tolerance_c = 1.e-2
      speed_tolerance_entries_c = 6
-     speed_tolerance_c = 5e12 5e12 5e12 5e12 5e12 5e12
+     speed_tolerance_c = 1000000000000.0 1000000000000.0 1000000000000.0 1000000000000.0 1000000000000.0 1000000000000.0
 
 # 500000000000.0 500000000000.0 500000000000.0 500000000000.0 500000000000.0 500000000000.0
