--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -4,8 +4,8 @@
 [Options]
 
 # Grid dimensions
-     mx = 50		      # mx_leaf
-     my = 50              # my_leaf
+     mx = 16		      # mx_leaf
+     my = 16              # my_leaf
      mbc = 2              # Number of ghost cells
 
 # Ghost cells initialization
@@ -13,7 +13,7 @@
 
 # Regridding information
      minlevel = 2         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     maxlevel = 6         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.05
@@ -21,7 +21,7 @@
      coarsen-delay = 0
 
 # Time stepping
-     tfinal = 5         # Final time
+     tfinal = 8.0         # Final time
 
      use_fixed_dt = F     # Take a fixed time step
      initial_dt = 0.016   # Initial time step for 'minlevel'
@@ -32,7 +32,7 @@
                           # 2 : not implemented;
                           # 3 : Take nout steps;  save files every nstep steps.
 
-     nout = 25            # Used for all three out styles;  has different meaning, though.
+     nout = 24            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = F         # subcycle in time ( = T or F).
@@ -65,6 +65,7 @@
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
      maux = 1             # maux
+     mbathy = 1           # mbathy
      src_term = 1         # src_term
 
      mwaves = 3           # mwaves
@@ -76,4 +77,4 @@
      speed_tolerance_entries_c = 6
      speed_tolerance_c = 1000000000000.0 1000000000000.0 1000000000000.0 1000000000000.0 1000000000000.0 1000000000000.0
 
-# 500000000000.0 500000000000.0 500000000000.0 500000000000.0 500000000000.0 500000000000.0
+
