(bowl_radial) updated regions to get something close to geoclaw results on webpage

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -4,16 +4,16 @@
 [Options]
 
 # Grid dimensions
-     mx = 16		      # mx_leaf
-     my = 16              # my_leaf
+     mx = 8		      # mx_leaf
+     my = 8              # my_leaf
      mbc = 2              # Number of ghost cells
 
 # Ghost cells initialization
-     init_ghostcell = T   # Initialize ghost cells
+     init_ghostcell = F   # Initialize ghost cells
 
 # Regridding information
-     minlevel = 2         # Minimum level
-     maxlevel = 6         # Maximum levels of refinement
+     minlevel = 3         # Minimum level
+     maxlevel = 8         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.05
@@ -76,5 +76,3 @@
      wave_tolerance_c = 1.e-2
      speed_tolerance_entries_c = 6
      speed_tolerance_c = 1000000000000.0 1000000000000.0 1000000000000.0 1000000000000.0 1000000000000.0 1000000000000.0
-
-
