--- a/Makefile.apps
+++ b/Makefile.apps
@@ -55,5 +55,6 @@ include applications/advection/2d/swirl/Makefile.am
 # Geoclaw examples
 if FCLAW_ENABLE_GEOCLAW
 include applications/geoclaw/bowl_radial/Makefile.am
+include applications/geoclaw/bowl_slosh/Makefile.am
 include applications/geoclaw/flat_bathymetry/Makefile.am
 endif
