--- a/applications/geoclaw/bowl_slosh/fclaw_options.ini
+++ b/applications/geoclaw/bowl_slosh/fclaw_options.ini
@@ -13,7 +13,7 @@
 
 # Regridding information
      minlevel = 3         # Minimum level
-     maxlevel = 8         # Maximum levels of refinement
+     maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.05
@@ -21,7 +21,7 @@
      coarsen-delay = 0
 
 # Time stepping
-     tfinal = 8.0         # Final time
+     tfinal = 4.4857014654663745         # Final time
 
      use_fixed_dt = F     # Take a fixed time step
      initial_dt = 0.016   # Initial time step for 'minlevel'
@@ -32,7 +32,7 @@
                           # 2 : not implemented;
                           # 3 : Take nout steps;  save files every nstep steps.
 
-     nout = 24            # Used for all three out styles;  has different meaning, though.
+     nout = 16            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = F         # subcycle in time ( = T or F).
@@ -55,10 +55,10 @@
      manifold = F         # Manifold
 
      # Domain dimensions - used only if manifold = F
-     ax = -100
-     bx = 100
-     ay = -100
-     by = 100
+     ax = -2.0
+     bx = 2.0
+     ay = -2.0
+     by = 2.0
 
 
 [geoclaw]
