--- a/Makefile.apps
+++ b/Makefile.apps
@@ -50,7 +50,7 @@ include applications/advection/2d/swirl/Makefile.am
 # include applications/amrclaw/advection/2d/swirl/Makefile.am
 # include applications/amrclaw/euler/2d/quadrants/Makefile.am
 # include applications/amrclaw/euler/2d/shockbubble/Makefile.am
-# include applications/amrclaw/shallow/2d/radialdam/Makefile.am
+include applications/amrclaw/shallow/2d/radialdam/Makefile.am
 
 # Geoclaw examples
 if FCLAW_ENABLE_GEOCLAW
