--- a/applications/advection/2d/swirl/fclaw_options.ini
+++ b/applications/advection/2d/swirl/fclaw_options.ini
@@ -1,5 +1,5 @@
 [user]
-     period = 4.0         # Periodicity of the flow field.
+     claw_version = 4         # Periodicity of the flow field.
 
 [Options]
 
