--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -26,7 +26,7 @@
      use_fixed_dt = F     # Take a fixed time step
      initial_dt = 0.016   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
-     desired_cfl = 0.9    # desired cfl
+     desired_cfl = 0.5    # desired cfl
 
      outstyle = 1         # 1 : Output steps  = tfinal/nout;
                           # 2 : not implemented;
@@ -35,7 +35,8 @@
      nout = 24            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
-     subcycle = F         # subcycle in time ( = T or F).
+     subcycle = T         # subcycle in time ( = T or F).
+     weighted_partition = T
 
 # File and console IO
      verbosity = production     # verbose
