--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -4,8 +4,8 @@
 [Options]
 
 # Grid dimensions
-     mx = 8		      # mx_leaf
-     my = 8              # my_leaf
+     mx = 16		      # mx_leaf
+     my = 16              # my_leaf
      mbc = 2              # Number of ghost cells
 
 # Ghost cells initialization
@@ -26,7 +26,7 @@
      use_fixed_dt = F     # Take a fixed time step
      initial_dt = 0.016   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
-     desired_cfl = 0.5    # desired cfl
+     desired_cfl = 0.7    # desired cfl
 
      outstyle = 1         # 1 : Output steps  = tfinal/nout;
                           # 2 : not implemented;
@@ -35,7 +35,7 @@
      nout = 24            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
-     subcycle = T         # subcycle in time ( = T or F).
+     subcycle = F         # subcycle in time ( = T or F).
      weighted_partition = T
 
 # File and console IO
