(bowl_radial) Minor edits to Matlab/ini files

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -1,11 +1,10 @@
 [user]
-     period = 4.0         # Periodicity of the flow field.
 
 [Options]
 
 # Grid dimensions
-     mx = 16		      # mx_leaf
-     my = 16              # my_leaf
+     mx = 8		      # mx_leaf
+     my = 8              # my_leaf
      mbc = 2              # Number of ghost cells
 
 # Ghost cells initialization
@@ -24,18 +23,19 @@
      tfinal = 8.0         # Final time
 
      use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.016   # Initial time step for 'minlevel'
+     initial_dt = 0.1   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
-     desired_cfl = 0.7    # desired cfl
+     desired_cfl = 0.9    # desired cfl
 
      outstyle = 1         # 1 : Output steps  = tfinal/nout;
                           # 2 : not implemented;
                           # 3 : Take nout steps;  save files every nstep steps.
 
      nout = 24            # Used for all three out styles;  has different meaning, though.
-     nstep = 1            # Only used if outstyle is 3
+     nstep = 4            # Only used if outstyle is 3
 
      subcycle = F         # subcycle in time ( = T or F).
+     outstyle-uses-maxlevel = F
      weighted_partition = T
 
 # File and console IO
