(slotted_disk/gaussian) Update examples

--- a/applications/NCAR_transport/slotted_disk/fclaw_options.ini
+++ b/applications/NCAR_transport/slotted_disk/fclaw_options.ini
@@ -38,7 +38,7 @@
      serialout = T        # Set this to F for parallel runs.  T is dead slow.
 
 # Debugging adn diagnostics
-     trapfpe = T          # Trap floating point exceptions
+     trapfpe = F          # Trap floating point exceptions
      mpi_debug = F
      check_conservation = F
      run_diagnostics = F
