--- a/applications/advection/2d/filament/example_sisc.ini
+++ b/applications/advection/2d/filament/example_sisc.ini
@@ -10,10 +10,10 @@
 
 # Regridding options
      minlevel = 3         # Minimum level
-     maxlevel = 7         # Maximum levels of refinement
+     maxlevel = 6         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
-     smooth-refine = F
-     smooth-level = 0
+     smooth-refine = T
+     smooth-level = 5
      coarsen-delay = 0
 
      refine_threshold = 0.25
@@ -28,7 +28,7 @@
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 1          # Controls how often output files are produced
-     nout =  1
+     nout =  20
      nstep = 1                 # Only used if outstyle is 3
 
      subcycle = T               # subcycle in time ( = T or F).
@@ -49,8 +49,8 @@
 
 # File and console IO
      verbosity = essential    # verbosity
-     serialout = F            # Works with Matlab
-     tikzout = F
+     serialout = T            # Works with Matlab
+     tikzout = T
      tikz_figsize = 4 4
      vtkout = F               # Read into VisIt
 
