(slotted_disk) Minor updates to ini files

--- a/applications/NCAR_transport/slotted_disk/example0.ini
+++ b/applications/NCAR_transport/slotted_disk/example0.ini
@@ -7,6 +7,13 @@
      mx = 8               # mx_leaf
      my = 8               # my_leaf
 
+
+     refine_threshold = 0.25
+     coarsen_threshold = 0.001
+     smooth-refine = T
+     smooth-level = 5
+     coarsen-delay=0
+
 # Refinement
      minlevel = 1         # Minimum level
-     maxlevel = 4         # Maximum levels of refinement
+     maxlevel = 6         # Maximum levels of refinement
