--- a/applications/NCAR_transport/slotted_disk/fclaw_options.ini
+++ b/applications/NCAR_transport/slotted_disk/fclaw_options.ini
@@ -18,6 +18,7 @@
      refine_threshold = 0.25
      coarsen_threshold = 0.05
      smooth-refine=T
+     smooth-level = 3
      coarsen-delay=0
 
 # Time stepping
