(slotted_disk/ini files) Minor update

--- a/applications/NCAR_transport/slotted_disk/fclaw_options.ini
+++ b/applications/NCAR_transport/slotted_disk/fclaw_options.ini
@@ -43,6 +43,8 @@
      check_conservation = F
      run_diagnostics = F
 
+     ghost_patch_pack_area = T
+
 # Mapping
      manifold = T         # Manifold
 
