Convert initialize C++ file to C

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -82,6 +82,7 @@ libforestclaw_compiled_sources = \
 	src/fclaw2d_map_brick.c \
 	src/fclaw2d_partition.c \
 	src/fclaw2d_timeinterp.c \
+	src/fclaw2d_initialize.c \
 	src/fclaw2d_output.cpp \
 	src/fclaw2d_output_ascii.cpp \
 	src/fclaw2d_regrid_default.cpp \
@@ -97,7 +98,6 @@ libforestclaw_compiled_sources = \
 	src/fclaw2d_physical_bc.cpp \
 	src/fclaw2d_clawpatch.cpp \
 	src/fclaw2d_farraybox.cpp \
-	src/fclaw2d_initialize.cpp \
 	src/fclaw2d_run.cpp \
 	src/fclaw2d_finalize.cpp \
 	src/fclaw2d_advance.cpp \
