Convert advance C++ files to C

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -89,6 +89,7 @@ libforestclaw_compiled_sources = \
 	src/fclaw2d_convenience.c \
 	src/fclaw2d_regrid.c \
 	src/fclaw2d_exchange.c \
+	src/fclaw2d_advance.c \
 	src/fp_exception_glibc_extension.c \
 	src/fclaw2d_output.cpp \
 	src/fclaw2d_output_ascii.cpp \
@@ -99,7 +100,6 @@ libforestclaw_compiled_sources = \
 	src/fclaw2d_clawpatch.cpp \
 	src/fclaw2d_farraybox.cpp \
 	src/fclaw2d_run.cpp \
-	src/fclaw2d_advance.cpp \
 	src/fclaw2d_update_single_step.cpp \
 	src/fclaw2d_diagnostics_default.cpp \
 	src/fclaw2d_metric_default.cpp \
