--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -14,7 +14,7 @@ libforestclaw_installed_headers = \
 	src/forestclaw2d.h \
 	src/fortran_source2d/metric_terms.i \
 	src/fp_exception_glibc_extension.h \
-	src/fclaw2d_advance.hpp \
+	src/fclaw2d_advance.h \
 	src/fclaw2d_farraybox.hpp \
 	src/fclaw2d_clawpatch.hpp \
 	src/fclaw2d_global.h \
@@ -91,12 +91,12 @@ libforestclaw_compiled_sources = \
 	src/fclaw2d_exchange.c \
 	src/fclaw2d_advance.c \
 	src/fclaw2d_physical_bc.c \
+	src/fclaw2d_ghost_fill.c \
 	src/fp_exception_glibc_extension.c \
 	src/fclaw2d_output.cpp \
 	src/fclaw2d_output_ascii.cpp \
 	src/fclaw2d_metric.cpp \
 	src/fclaw2d_diagnostics.cpp \
-	src/fclaw2d_ghost_fill.cpp \
 	src/fclaw2d_clawpatch.cpp \
 	src/fclaw2d_farraybox.cpp \
 	src/fclaw2d_run.cpp \
