Convert update_single C++ file to C

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -94,13 +94,13 @@ libforestclaw_compiled_sources = \
 	src/fclaw2d_ghost_fill.c \
 	src/fclaw2d_metric.c \
 	src/fclaw2d_output.c \
+	src/fclaw2d_update_single_step.c \
 	src/fp_exception_glibc_extension.c \
 	src/fclaw2d_output_ascii.cpp \
 	src/fclaw2d_diagnostics.cpp \
 	src/fclaw2d_clawpatch.cpp \
 	src/fclaw2d_farraybox.cpp \
 	src/fclaw2d_run.cpp \
-	src/fclaw2d_update_single_step.cpp \
 	src/fclaw2d_diagnostics_default.cpp \
 	src/fclaw2d_metric_default.cpp \
 	src/fclaw2d_regrid_default.cpp \
