Convert regrid_default C++ file to C

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -97,13 +97,13 @@ libforestclaw_compiled_sources = \
 	src/fclaw2d_update_single_step.c \
 	src/fclaw2d_run.c \
 	src/fclaw2d_diagnostics.c \
+	src/fclaw2d_regrid_default.c \
 	src/fp_exception_glibc_extension.c \
 	src/fclaw2d_output_ascii.cpp \
 	src/fclaw2d_clawpatch.cpp \
 	src/fclaw2d_farraybox.cpp \
 	src/fclaw2d_diagnostics_default.cpp \
 	src/fclaw2d_metric_default.cpp \
-	src/fclaw2d_regrid_default.cpp \
 	src/mappings/context.f \
 	src/mappings/scale_rot_map.f \
 	src/mappings/map_query.f \
