--- a/Makefile.apps
+++ b/Makefile.apps
@@ -25,9 +25,9 @@ include applications/dummy/Makefile.am
 # Scalar advection on manifolds
 # include applications/advection/2d/swirl_mapped/Makefile.am
 include applications/advection/2d/swirl/Makefile.am
-# include applications/advection/2d/torus/Makefile.am
+include applications/advection/2d/torus/Makefile.am
 # include applications/advection/2d/hemisphere/Makefile.am
-# include applications/advection/2d/filament/Makefile.am
+include applications/advection/2d/filament/Makefile.am
 # include applications/advection/2d/sphere/Makefile.am
 
 # NCAR Transport problems on the sphere
