(torus) Update application

--- a/applications/advection/2d/torus/fclaw_options.ini
+++ b/applications/advection/2d/torus/fclaw_options.ini
@@ -39,6 +39,8 @@
      meqn = 1             # meqn
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
+     ghost_patch_pack_area = T
+
 # Diagnostics and debugging
      check_conservation = F
      run_diagnostics = F
