--- a/applications/advection/2d/hemisphere/fclaw_options.ini
+++ b/applications/advection/2d/hemisphere/fclaw_options.ini
@@ -7,9 +7,11 @@
      my = 8               # my_leaf
      mbc = 2              # mbc
 
-     minlevel = 0         # Minimum level
-     maxlevel = 3        # Maximum levels of refinement
+     minlevel = 1         # Minimum level
+     maxlevel = 1        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     smooth-refine = T
+     smooth-level = 1
 
 # Time stepping
      tfinal = 5.0         #
