(filament) Update applications

--- a/applications/advection/2d/filament/Makefile.am
+++ b/applications/advection/2d/filament/Makefile.am
@@ -16,13 +16,13 @@ applications_advection_2d_filament_filament_SOURCES = \
 	applications/advection/2d/filament/fclaw2d_map_squareddisk.c \
 	applications/advection/2d/filament/fclaw2d_map_pillowdisk5.c \
 	applications/advection/2d/filament/fclaw2d_map_fivepatch.c \
-	applications/advection/2d/filament/user_4.6/tag4coarsening.f \
-	applications/advection/2d/filament/user_4.6/tag4refinement.f \
 	applications/advection/2d/filament/psi.f \
 	applications/advection/2d/filament/setprob.f \
-	applications/advection/2d/filament/user_4.6/qinit.f \
-	applications/advection/2d/filament/user_4.6/setaux.f \
-	applications/advection/2d/filament/user_4.6/setaux_manifold.f \
+	applications/advection/2d/filament/user_4.6/clawpack46_tag4coarsening.f \
+	applications/advection/2d/filament/user_4.6/clawpack46_tag4refinement.f \
+	applications/advection/2d/filament/user_4.6/clawpack46_qinit.f \
+	applications/advection/2d/filament/user_4.6/clawpack46_setaux.f \
+	applications/advection/2d/filament/user_4.6/clawpack46_setaux_manifold.f \
 	applications/advection/2d/filament/user_4.6/rpn2noncons.f \
 	applications/advection/2d/filament/user_4.6/rpt2noncons.f
 
