--- a/applications/advection/2d/filament/example0.ini
+++ b/applications/advection/2d/filament/example0.ini
@@ -19,14 +19,14 @@
 # Time stepping
      tfinal = 4.0         #
 
-     use_fixed_dt = T     # Take a fixed time step
+     use_fixed_dt = F     # Take a fixed time step
      initial_dt = 4e-3   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 3         # Controls how often output files are produced
-     nout = 1000
-     nstep = 100            # Only used if outstyle is 3
+     outstyle = 1         # Controls how often output files are produced
+     nout = 40
+     nstep = 1            # Only used if outstyle is 3
 
      subcycle = F       # subcycle in time ( = T or F).
 
@@ -42,7 +42,7 @@
      mpi_debug = F
 
 # File and console IO
-     verbosity = production    # verbosity
+     verbosity = essential    # verbosity
      serialout = T            # Works with Matlab
      vtkout = 0               # Read into VisIt
 
