(swirl) Update application

--- a/applications/advection/2d/swirl/example0.ini
+++ b/applications/advection/2d/swirl/example0.ini
@@ -31,7 +31,7 @@
      subcycle = T         # subcycle in time ( = T or F).
 
 # File and console IO
-     verbosity = info        # verbose
+     verbosity = essential        # verbose
 
      trapfpe = T          # Trap floating point exceptions
      mpi_debug = F
