--- a/applications/advection/2d/swirl/fclaw_options.ini
+++ b/applications/advection/2d/swirl/fclaw_options.ini
@@ -66,3 +66,12 @@
 
      mwaves = 1           # mwaves
      mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
+
+[clawpack46]
+     order  = 2 2         # normal and transverse order
+     mcapa = 0            # mcapa
+     maux = 2             # maux
+     src_term = 0         # src_term
+
+     mwaves = 1           # mwaves
+     mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
