--- a/applications/advection/2d/swirl/Makefile.am
+++ b/applications/advection/2d/swirl/Makefile.am
@@ -13,19 +13,23 @@ applications_advection_2d_swirl_swirl_SOURCES = \
 	applications/advection/2d/swirl/psi.f \
 	applications/advection/2d/swirl/setprob.f \
 	applications/advection/2d/swirl/user_4.6/tag4refinement.f \
-	applications/advection/2d/swirl/user_4.6/bc2.f \
 	applications/advection/2d/swirl/user_4.6/rpn2_vc_advection.f90 \
 	applications/advection/2d/swirl/user_4.6/rpt2_vc_advection.f90 \
 	applications/advection/2d/swirl/user_4.6/qinit.f \
 	applications/advection/2d/swirl/user_4.6/b4step2.f \
 	applications/advection/2d/swirl/user_4.6/setaux.f \
-	applications/advection/2d/swirl/user_4.6/output.f
+	applications/advection/2d/swirl/user_5.0/tag4refinement.f \
+	applications/advection/2d/swirl/user_5.0/rpn2_vc_advection.f90 \
+	applications/advection/2d/swirl/user_5.0/rpt2_vc_advection.f90 \
+	applications/advection/2d/swirl/user_5.0/qinit.f \
+	applications/advection/2d/swirl/user_5.0/b4step2.f \
+	applications/advection/2d/swirl/user_5.0/setaux.f
 
 applications_advection_2d_swirl_swirl_CPPFLAGS = \
         $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) $(FCLAW_CLAWPACK5_CPPFLAGS) \
 	$(FCLAW_DUMMY_CPPFLAGS)
 
 applications_advection_2d_swirl_swirl_LDADD = \
-        $(FCLAW_CLAWPACK46_LDADD) $(FCLAW_DUMMY_LDADD) $(LDADD)
+        $(FCLAW_CLAWPACK46_LDADD) $(FCLAW_DUMMY_LDADD)  $(FCLAW_CLAWPACK5_LDADD) $(LDADD)
 
 ## @top_builddir@/src/solvers/fclaw2d_clawpack46/libclawpack5.la
