(swirl) Update claw5 files

--- a/applications/advection/2d/swirl/Makefile.am
+++ b/applications/advection/2d/swirl/Makefile.am
@@ -18,12 +18,12 @@ applications_advection_2d_swirl_swirl_SOURCES = \
 	applications/advection/2d/swirl/user_4.6/qinit.f \
 	applications/advection/2d/swirl/user_4.6/b4step2.f \
 	applications/advection/2d/swirl/user_4.6/setaux.f \
-	applications/advection/2d/swirl/user_5.0/tag4refinement.f \
+	applications/advection/2d/swirl/user_5.0/tag4refinement.f90 \
 	applications/advection/2d/swirl/user_5.0/rpn2_vc_advection.f90 \
 	applications/advection/2d/swirl/user_5.0/rpt2_vc_advection.f90 \
-	applications/advection/2d/swirl/user_5.0/qinit.f \
-	applications/advection/2d/swirl/user_5.0/b4step2.f \
-	applications/advection/2d/swirl/user_5.0/setaux.f
+	applications/advection/2d/swirl/user_5.0/qinit.f90 \
+	applications/advection/2d/swirl/user_5.0/b4step2.f90 \
+	applications/advection/2d/swirl/user_5.0/setaux.f90
 
 applications_advection_2d_swirl_swirl_CPPFLAGS = \
         $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) $(FCLAW_CLAWPACK5_CPPFLAGS) \
