(hemisphere) Update so this compiles with versions 4.6 and 5

--- a/applications/advection/2d/hemisphere/Makefile.am
+++ b/applications/advection/2d/hemisphere/Makefile.am
@@ -11,13 +11,18 @@ applications_advection_2d_hemisphere_hemisphere_SOURCES = \
 	applications/advection/2d/hemisphere/fclaw2d_map_pillowsphere.c \
 	applications/advection/2d/hemisphere/fclaw2d_map_pillowsphere5.c \
 	applications/advection/2d/hemisphere/setprob.f \
-	applications/advection/2d/hemisphere/user_4.6/clawpack46_rpn2.f \
-	applications/advection/2d/hemisphere/user_4.6/clawpack46_rpt2.f \
-	applications/advection/2d/hemisphere/user_4.6/clawpack46_qinit.f \
-	applications/advection/2d/hemisphere/user_4.6/hemisphere46_setaux_manifold.f
+	applications/advection/2d/hemisphere/fdisc.f \
+	applications/advection/2d/hemisphere/user_4.6/rpn2.f \
+	applications/advection/2d/hemisphere/user_4.6/rpt2.f \
+	applications/advection/2d/hemisphere/user_4.6/qinit.f \
+	applications/advection/2d/hemisphere/user_4.6/setaux_manifold.f \
+	applications/advection/2d/hemisphere/user_5.0/rpn2.f90 \
+	applications/advection/2d/hemisphere/user_5.0/rpt2.f90 \
+	applications/advection/2d/hemisphere/user_5.0/qinit.f90 \
+	applications/advection/2d/hemisphere/user_5.0/setaux_manifold.f90
 
 applications_advection_2d_hemisphere_hemisphere_CPPFLAGS = \
-        $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS)
+        $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) $(FCLAW_CLAWPACK5_CPPFLAGS)
 
 applications_advection_2d_hemisphere_hemisphere_LDADD = \
-        $(FCLAW_CLAWPACK46_LDADD) $(LDADD)
+        $(FCLAW_CLAWPACK46_LDADD) $(FCLAW_CLAWPACK5_LDADD) $(LDADD)
