--- a/applications/advection/2d/hemisphere/fclaw_options.ini
+++ b/applications/advection/2d/hemisphere/fclaw_options.ini
@@ -1,6 +1,7 @@
 [user]
      example = 2          # 1 = five-patch sphere;  2 = pillow sphere
      alpha = 0.4
+     claw-version = 4
 
 [Options]
      mx = 8               # mx_leaf
@@ -32,7 +33,7 @@
      serialout = T        # Set this to F for parallel runs.  T is dead slow.
 
 # Debugging options
-     trapfpe = T          # Trap floating point exceptions
+     trapfpe = F          # Trap floating point exceptions
      mpi_debug = F
      check_conservation = F
      run_diagnostics = F
@@ -54,6 +55,15 @@
      periodic_y = 0
 
 [clawpack46]
+     order  = 2 2         # normal and transverse order
+     mcapa = 1            # mcapa
+     maux = 3             # maux
+     src_term = 0         # src_term
+
+     mwaves = 1           # mwaves
+     mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
+
+[clawpack5]
      order  = 2 2         # normal and transverse order
      mcapa = 1            # mcapa
      maux = 3             # maux
