--- a/applications/advection/2d/swirl/fclaw_options.ini
+++ b/applications/advection/2d/swirl/fclaw_options.ini
@@ -1,5 +1,7 @@
 [user]
      claw_version = 4         # Periodicity of the flow field.
+     tperiod = 4.0
+     claw-version = 4
 
 [Options]
 
@@ -8,14 +10,16 @@
      my = 8               # my_leaf
      mbc = 2              # Number of ghost cells
 
-# Regridding information
+# Dynamic gridding parameters
      minlevel = 2         # Minimum level
      maxlevel = 6         # Maximum levels of refinement
+
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.05
+
      smooth-refine = T
-     coarsen-delay = 0
+     refine-level = 5
 
 # Time stepping
      tfinal = 4.0         #  Final time
@@ -25,9 +29,7 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 1         # 1 : Output steps  = tfinal/nout;
-                          # 2 : not implemented;
-			           # 3 : Take nout steps;  save files every nstep steps.
+     outstyle = 1         # OutputStyle = 1,2,3
 
      nout = 16            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
@@ -35,14 +37,15 @@
      subcycle = T         # subcycle in time ( = T or F).
 
 # File and console IO
-     verbosity = production        # verbose
+     verbosity = essential        # verbose
      serialout = T
 
 # Diagnostics and debugging
-     trapfpe = T          # Trap floating point errors.
-     mpi_debug = F        # Attach mpi processes in gdb
-     check_conservation = F
-     run_diagnostics = F
+     trapfpe = T                 # Trap floating point errors.
+     mpi_debug = F               # Attach mpi processes in gdb
+     conservation-check = F
+     run-user-diagnostics = F
+     compute-error = F
 
 # Equations and boundary conditions
      meqn = 1             # Number of equations
@@ -58,7 +61,7 @@
      by = 1
 
 
-[clawpack5]
+[clawpack46]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
      maux = 2             # maux
@@ -67,7 +70,7 @@
      mwaves = 1           # mwaves
      mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
 
-[clawpack46]
+[clawpack5]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
      maux = 2             # maux
